tests/codeless_suppression/codeless_suppression.exp
Error ----------------------------------------------------------------------------------------------------- test.js:10:1

Suppression contains a malformed error code. Suppressions with error codes should be formatted as `$FlowFixMe[<CODE>]`.

   10| // $FlowFixMe[]
       ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:11:2

Cannot cast `3` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:11:2
   11| (3: string);
        ^ [1]

References:
   test.js:11:5
   11| (3: string);
           ^^^^^^ [2]



Found 2 errors
